<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.gymmaster.ui.home.HomeFragment"
        android:label="@string/title_home" />

    <fragment
        android:id="@+id/navigation_training"
        android:name="com.example.gymmaster.ui.training.TrainingFragment"
        android:label="@string/title_training" />

    <fragment
        android:id="@+id/navigation_diet"
        android:name="com.example.gymmaster.ui.diet.DietFragment"
        android:label="@string/title_diet" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.gymmaster.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />
</navigation> 